--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@mediapipe/hands": "^0.4.1675469240",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
