--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tone": "^15.1.22"
+    "tone": "^15.1.22",
+    "webmidi": "^3.1.14"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
