--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "peerjs": "^1.5.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "simple-peer": "^9.11.1",
     "tailwind-merge": "^3.3.1",
     "tone": "^15.1.22",
     "webmidi": "^3.1.14"
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/peerjs": "^0.0.30",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
