--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "server": "ts-node --project server/tsconfig.json server/index.ts",
+    "server:dev": "ts-node-dev --project server/tsconfig.json --respawn server/index.ts"
   },
   "dependencies": {
+    "@elevenlabs/client": "^0.9.2",
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/hands": "^0.4.1675469240",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/ws": "^8.18.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
@@ -24,7 +29,8 @@
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1",
     "tone": "^15.1.22",
-    "webmidi": "^3.1.14"
+    "webmidi": "^3.1.14",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -34,6 +40,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
